--- a/style.css
+++ b/style.css
@@ -240,43 +240,26 @@ footer {
     }
 }
 
-@media screen and (max-width: 750px) {
-    header {
-        margin-bottom: 4rem;
-    }
+@media screen and (max-width:700px){
     .btnGroup {
         display: flex;
-        flex-direction: column;
-        justify-content: center;
         align-items: center;
+        flex-direction: column;
+        gap: 2rem;
     }
-    
-    .btnGroup button {
-        marging-bottom: 1.6rem;
-
-    .imgLeft {
-        margin-bottom: 4rem;
-    }
-
-    .heroPeople {
-        margin-top: 15rem;
-    }
-    .people {
-        flex-wrap: wrap;
-    }
-
-    article {
-        margin-bottom: 8rem;
-    }
-
-    .peopleImg {
-        flex-basis: 47%;
-        margin-bottom: 2rem;
-    }
-
     .box h3, .row h3 {
         font-size: 3.2rem;
         line-height: 3.6rem;
     }
-    
+    .heroPeople {
+        margin-top: 10rem;
+    }
+    .peopleImg {
+        flex-basis: 47%;
+        max-width: 25rem;
+        margin-bottom: 2rem;
+    }
+    .people {
+        flex-wrap: wrap;
+    }
 }
